[package]
name = "cleanup-package-files"
version = "0.1.0"
authors = ["lilydjwg <lilydjwg@gmail.com>"]
edition = "2021"

[dependencies]
nix = "*"
eyre = "*"
expanduser = "*"
pwd = "*"

[dependencies.structopt]
version = "*"
default-features = false
features = []

[patch.crates-io]
# a version with thiserror instead of the deprecated failure crate
pwd = { git = "https://gitlab.com/Goorzhel/pwd.git", branch = "update" }

[profile.release]
lto = true
