[package]
name = "cleanup-package-files"
version = "0.1.0"
authors = ["lilydjwg <lilydjwg@gmail.com>"]
edition = "2021"

[dependencies]
nix = "*"
eyre = "*"
expanduser = "*"
# since 1.4.0 it uses thiserror instead of failure
pwd = "1.4"

[dependencies.structopt]
version = "*"
default-features = false
features = []

[profile.release]
lto = true
