[package]
name = "matrixbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = { version = "*", default-features = false, features = ["eyre", "sqlite", "native-tls", "e2e-encryption"] }
matrix-sdk-sqlite = "*"
matrix-sdk-base = "*"
# ruma = { version = "*", features = ["client-api"] }

serde = "*"
serde_json = "*"
tokio = { version = "*", features = ["tokio-macros", "full"] }
url = { version = "*", features = ["serde"] }
futures = "*"
futures-util = "*"

clap = { version = "*", default-features = false, features = ["std", "derive", "help"] }
eyre = "*"
tracing = "*"
tracing-subscriber = { version = "*", default-features = false, features = ["env-filter", "fmt", "ansi"] }
rustyline = { version = "*", default-features = false }
pinentry = "*"
secrecy = "*"

[profile.dev.package."*"]
opt-level = 2
