[package]
name = "matrixbot"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = { version = "*", default-features = false, features = ["eyre", "sqlite", "native-tls", "e2e-encryption"] }
matrix-sdk-base = "*"

serde = "*"
serde_json = "*"
tokio = { version = "*", features = ["tokio-macros", "full"] }
futures = "*"

clap = { version = "*", default-features = false, features = ["std", "derive", "help"] }
eyre = "*"
tracing = "*"
tracing-subscriber = { version = "*", default-features = false, features = ["env-filter", "fmt", "ansi", "chrono"] }

matrixutils = { version = "*", path = "matrixutils" }

[profile.dev.package."*"]
opt-level = 2
