[package]
name = "mirror-delay"
version = "0.3.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "*", default-features = false, features = ["serde"] }
eyre = "*"
futures = "*"
httpdate = "*"
psl = "*"
rand = "*"
rand_distr = "*"
nyquest = { version = "*", default-features = false, features = ["json"] }
nyquest-preset = { version = "*", features = ["async"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sqlx = { version = "*", default-features = false, features = ["postgres", "runtime-tokio"] }
tokio = { version = "*", features = ["rt", "time", "net"] }
url = { version = "*", features = ["serde"] }
