[package]
name = "mirror-delay"
version = "0.3.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "*", default-features = false, features = ["serde"] }
eyre = "*"
futures = "*"
httpdate = "*"
psl = "*"
rand = "0.10"
rand_distr = "*"
reqwest = { version = "*", features = ["json", "native-tls-alpn", "http2"], default-features = false }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sqlx = { version = "*", default-features = false, features = ["postgres", "runtime-tokio"] }
tokio = { version = "*", features = ["rt", "time", "net"] }
url = { version = "*", features = ["serde"] }
